--- a/css/styles.css
+++ b/css/styles.css
@@ -391,6 +391,7 @@ body {
   font-family: "Livvic", "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  background-color: #014E56;
 }
 
 img {
@@ -448,7 +449,6 @@ img {
 
 .site-header {
   padding-top: 73px;
-  background-color: #014E56;
 }
 
 .site-header__container {
@@ -479,6 +479,8 @@ img {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -494,6 +496,8 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-right: 10px;
 }
 
@@ -511,7 +515,6 @@ img {
 }
 
 .hero {
-  background-color: #014E56;
   padding-top: 130px;
   padding-bottom: 250px;
   background-image: url("../img/hero-bg-dark.svg"), url("../img/hero-bg-pink.svg");
@@ -568,5 +571,140 @@ img {
   height: 4px;
   background-color: #79C8C7;
   display: block;
+}
+
+.features {
+  background-color: #012F34;
+  padding-top: 140px;
+  padding-bottom: 140px;
+  background-image: url("../img/features-bg.svg");
+  background-size: 200px 244px;
+  background-position: calc(50% + 760px) 380px;
+  background-repeat: no-repeat;
+}
+
+.features__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.features__heading-box {
+  max-width: 445px;
+}
+
+.features__heading {
+  position: relative;
+  z-index: 1;
+  margin: 0;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 48px;
+  color: #ffffff;
+}
+
+.features__heading::before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: -54px;
+  width: 50px;
+  height: 4px;
+  display: block;
+  background-color: #F67E7E;
+}
+
+.features__features-box {
+  max-width: 540px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.features__list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.features-list__item {
+  max-width: 540px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.features-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.features-list__item--first::before {
+  content: "";
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 72px;
+  height: 72px;
+  background-image: url("../img/feature-1.svg");
+  background-size: 72px 72px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin-right: 23px;
+  display: block;
+}
+
+.features-list__item--second::before {
+  content: "";
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 72px;
+  height: 72px;
+  background-image: url("../img/feature-2.svg");
+  background-size: 72px 72px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin-right: 23px;
+  display: block;
+}
+
+.features-list__item--third::before {
+  content: "";
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 72px;
+  height: 72px;
+  background-image: url("../img/feature-3.svg");
+  background-size: 72px 72px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin-right: 23px;
+  display: block;
+}
+
+.features-list__heading {
+  margin: 0;
+  margin-bottom: 16px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 28px;
+  color: #F67E7E;
+}
+
+.features-list__text {
+  margin: 0;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 25px;
+  color: #ffffff;
+  opacity: 0.8;
 }
 /*# sourceMappingURL=styles.css.map */
