--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -17,6 +17,7 @@ body {
   font-family: "Livvic", "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  background-color: $main-color;
 }
 
 img {
