--- a/scss/blocks/_sitenav.scss
+++ b/scss/blocks/_sitenav.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   flex-grow: 1;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -11,6 +12,7 @@
   list-style-type: none;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   margin-right: 10px;
 }
 
