--- a/scss/blocks/_features.scss
+++ b/scss/blocks/_features.scss
@@ -4,7 +4,7 @@
   padding-bottom: 140px;
   background-image: url("../img/features-bg.svg");
   background-size: 200px 244px;
-  background-position: calc(50% + 760px) 380px;
+  background-position: left calc(50% + 760px) bottom 0;
   background-repeat: no-repeat;
 }
 
