--- a/scss/blocks/_features-list.scss
+++ b/scss/blocks/_features-list.scss
@@ -54,3 +54,20 @@
   color: #ffffff;
   opacity: 0.8;
 }
+
+@media only screen and (max-width: 376px){
+
+  .features-list__item{
+    flex-direction: column;
+    text-align: center;
+
+    &:not(:last-child){
+      margin-bottom: 48px;
+    }
+
+    &:before{
+      margin-right: 0;
+      margin-bottom: 16px;
+    }
+  }
+}
