--- a/scss/blocks/_logo.scss
+++ b/scss/blocks/_logo.scss
@@ -6,3 +6,14 @@
 .site-header__logo-img{
   display: block;
 }
+
+@media only screen and (max-width: 768px){
+  .site-header__logo{
+    margin-right: 48px;
+  }
+
+  .site-header__logo-img{
+    width: 128px;
+    height: 32px;
+  }
+}
