--- a/scss/blocks/_sitenav.scss
+++ b/scss/blocks/_sitenav.scss
@@ -28,3 +28,9 @@
   line-height: 28px;
   color: #ffffff;
 }
+.sitenav__link:hover{
+  color: #F67E7E;
+}
+.sitenav__link:active{
+  opacity: 0.7;
+}
