--- a/scss/blocks/_stories-list.scss
+++ b/scss/blocks/_stories-list.scss
@@ -4,7 +4,6 @@
   list-style-type: none;
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
 .stories-list__item{
@@ -12,6 +11,8 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  margin-right: 13px;
 }
 
 .stories-list__story-box{
@@ -21,37 +22,40 @@
     content: "";
     width: 62px;
     height: 62px;
-    transform: translateX(225%);
     display: block;
     background-image: url("../img/kady.jpg");
     background-repeat: no-repeat;
     background-size: 62px 62px;
     background-position: center;
     border-radius: 50%;
+    margin-right: auto;
+    margin-left: auto;
   }
   &--aiysha::after{
     content: "";
     width: 62px;
     height: 62px;
-    transform: translateX(225%);
     display: block;
     background-image: url("../img/aiysha.jpg");
     background-repeat: no-repeat;
     background-size: 62px 62px;
     background-position: center;
     border-radius: 50%;
+    margin-right: auto;
+    margin-left: auto;
   }
   &--arthur::after{
     content: "";
     width: 62px;
     height: 62px;
-    transform: translateX(225%);
     display: block;
     background-image: url("../../img/arthur.jpg");
     background-repeat: no-repeat;
     background-size: 62px 62px;
     background-position: center;
     border-radius: 50%;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
@@ -100,3 +104,40 @@ only screen and (                min-resolution: 2dppx) {
     background-image: url("../img/arthur@2x.jpg");
   }
 }
+
+@media only screen and (max-width: 1100px){
+
+  .stories-list{
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .stories-list__item:not(:last-child){
+    margin-right: 0;
+    margin-bottom: 48px;
+  }
+}
+
+  .stories-list__item:nth-child(1n){
+    margin-right: 13px;
+  }
+
+@media only screen and (max-width: 937px){
+
+  .stories-list__item{
+    max-width: 765px;
+  }
+
+  .stories-list__item:nth-child(1n){
+    margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 768px){
+
+  .stories-list__item{
+    max-width: 573px;
+  }
+}
+
+@media only screen and (max-width: 525px){}
