--- a/css/styles.css
+++ b/css/styles.css
@@ -483,18 +483,7 @@ img {
       flex-wrap: wrap;
 }
 
-@media only screen and (max-width: 525px) {
-  .site-header {
-    position: fixed;
-    z-index: 1000;
-    padding-top: 48px;
-    padding-bottom: 10px;
-    background-color: #014E56;
-  }
-}
-
 .site-header__logo {
-  display: inline-block;
   margin-right: 80px;
 }
 
@@ -502,20 +491,10 @@ img {
   display: block;
 }
 
-@media only screen and (max-width: 768px) {
-  .site-header__logo {
-    margin-right: 48px;
-  }
-  .site-header__logo-img {
-    width: 128px;
-    height: 32px;
-  }
-}
-
 .site-header__sitenav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -529,13 +508,45 @@ img {
           justify-content: space-between;
 }
 
+@media only screen and (max-width: 769px) {
+  .site-header__logo {
+    margin-right: 48px;
+  }
+  .site-header__logo-img {
+    width: 128px;
+    height: 32px;
+  }
+}
+
+@media only screen and (max-width: 525px) {
+  .site-header {
+    position: fixed;
+    z-index: 1000;
+    padding-top: 48px;
+    padding-bottom: 10px;
+    background-color: #014E56;
+  }
+}
+
+.logo {
+  display: inline-block;
+}
+
+.logo__logo-img {
+  display: block;
+}
+
+.logo:active {
+  opacity: 0.7;
+}
+
 .sitenav__list {
   padding: 0;
   margin: 0;
   list-style-type: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1149,6 +1160,12 @@ img {
   margin-right: 13px;
 }
 
+@media only screen and (max-width: 1450px) {
+  .starter {
+    background-position: left 0 bottom -125px;
+  }
+}
+
 @media only screen and (max-width: 897px) {
   .starter {
     background-position: left 0 bottom -125px;
@@ -1174,6 +1191,248 @@ img {
   .starter__heading {
     margin-right: 0;
     margin-bottom: 24px;
+  }
+}
+
+.site-footer {
+  background-color: #002529;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.site-footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.site-footer__mini-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 13px;
+}
+
+.site-footer__nav-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 160px;
+  margin-right: 125px;
+}
+
+.site-footer__logo {
+  margin-bottom: 25px;
+}
+
+.site-footer__logo-img {
+  display: block;
+}
+
+.site-footer__nav {
+  display: inline-block;
+}
+
+.site-footer__nav-list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-right: 10px;
+}
+
+.site-footer__nav-item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.site-footer__nav-link {
+  text-decoration: none;
+  color: #72787D;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  color: #ffffff;
+}
+
+.site-footer__nav-link:hover {
+  color: #F67E7E;
+}
+
+.site-footer__nav-link:active {
+  opacity: 0.7;
+}
+
+.site-footer__address {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 25px;
+  color: #fff;
+  opacity: 0.6;
+}
+
+.site-footer__tel {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 25px;
+  color: #fff;
+  opacity: 0.6;
+}
+
+.site-footer__social-list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 104px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: auto;
+  margin-bottom: 43px;
+}
+
+.site-footer__social-img:hover {
+  fill: #F67E7E;
+}
+
+.site-footer__social-img:active {
+  opacity: 0.7;
+}
+
+.site-footer__socials-text {
+  margin: 0;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 25px;
+  color: #fff;
+  opacity: 0.6;
+}
+
+@media only screen and (max-width: 801px) {
+  .site-footer {
+    padding-top: 56px;
+    padding-bottom: 56px;
+  }
+  .site-footer__container {
+    padding-right: 40px;
+    padding-left: 40px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .site-footer__mini-box {
+    width: 100%;
+    margin-bottom: 32px;
+    margin-right: 0;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .site-footer__logo {
+    width: 96px;
+    height: 24px;
+    margin-bottom: 53px;
+  }
+  .site-footer__nav-link {
+    font-size: 15px;
+    line-height: 25px;
+  }
+  .site-footer__address {
+    text-align: end;
+  }
+  .site-footer__socials {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .site-footer__social-list {
+    margin: 0;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media only screen and (max-width: 501px) {
+  .site-footer {
+    padding-top: 66px;
+    padding-bottom: 64px;
+  }
+  .site-footer__container {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+  .site-footer__mini-box {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .site-footer__nav-box {
+    margin-right: 0;
+    margin-bottom: 24px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .site-footer__logo {
+    margin-bottom: 24px;
+  }
+  .site-footer__address-box {
+    margin-bottom: 40px;
+  }
+  .site-footer__address {
+    text-align: center;
+  }
+  .site-footer__socials {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .site-footer__social-list {
+    margin-bottom: 16px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
