--- a/scss/blocks/_logo.scss
+++ b/scss/blocks/_logo.scss
@@ -1,19 +1,11 @@
-.site-header__logo{
+.logo{
   display: inline-block;
-  margin-right: 80px;
 }
 
-.site-header__logo-img{
+.logo__logo-img{
   display: block;
 }
 
-@media only screen and (max-width: 768px){
-  .site-header__logo{
-    margin-right: 48px;
-  }
-
-  .site-header__logo-img{
-    width: 128px;
-    height: 32px;
-  }
+.logo:active{
+  opacity: 0.7;
 }
