--- a/scss/blocks/_starter.scss
+++ b/scss/blocks/_starter.scss
@@ -25,6 +25,13 @@
   margin-right: 13px;
 }
 
+@media only screen and (max-width: 1450px){
+
+  .starter{
+    background-position: left 0 bottom -125px;
+  }
+}
+
 @media only screen and (max-width: 897px){
 
   .starter{
