--- a/css/styles.css
+++ b/css/styles.css
@@ -503,9 +503,10 @@ img {
           flex-grow: 1;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+}
+
+.site-header__toggler {
+  display: none;
 }
 
 @media only screen and (max-width: 769px) {
@@ -520,11 +521,82 @@ img {
 
 @media only screen and (max-width: 525px) {
   .site-header {
+    width: 100%;
     position: fixed;
-    z-index: 1000;
+    z-index: 10;
+    left: 0;
+    top: 0;
     padding-top: 48px;
-    padding-bottom: 10px;
+    padding-bottom: 13px;
     background-color: #014E56;
+  }
+  .site-header__logo {
+    margin-right: 0;
+  }
+  .site-header__sitenav {
+    display: none;
+  }
+  .site-header__toggler {
+    position: relative;
+    z-index: 1;
+    display: block;
+    border: none;
+    padding: 0;
+    width: 20px;
+    height: 17px;
+    background-color: transparent;
+    margin-left: auto;
+    background-image: url("../img/open.svg");
+    background-size: 20px 17px;
+    background-repeat: no-repeat;
+    background-position: right center;
+  }
+  .site-header--open .site-header__toggler {
+    background-image: url("../img/close.svg");
+    z-index: 30;
+  }
+  .site-header__toggler::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    position: absolute;
+  }
+  .site-header--open .site-header__sitenav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    position: absolute;
+    z-index: 30;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 68%;
+    background-color: #2b2828;
+    padding-top: 112px;
+    padding-left: 24px;
+  }
+  .site-header--open .site-header__sitenav .sitenav__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-right: 0;
+    margin-bottom: 36px;
+  }
+  .site-header--open .site-header__sitenav .sitenav__item:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 24px;
   }
 }
 
@@ -552,7 +624,7 @@ img {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-right: 10px;
+  margin-right: auto;
 }
 
 .sitenav__item:not(:last-child) {
