--- a/scss/blocks/_site-header.scss
+++ b/scss/blocks/_site-header.scss
@@ -21,7 +21,10 @@
   align-items: center;
   flex-grow: 1;
   flex-wrap: wrap;
-  justify-content: space-between;
+}
+
+.site-header__toggler{
+  display: none;
 }
 
 @media only screen and (max-width: 769px){
@@ -39,10 +42,78 @@
 @media only screen and (max-width: 525px){
 
   .site-header{
+    width: 100%;
     position: fixed;
-    z-index: 1000;
+    z-index: 10;
+    left: 0;
+    top: 0;
     padding-top: 48px;
-    padding-bottom: 10px;
+    padding-bottom: 13px;
     background-color: $main-color;
+  }
+
+  .site-header__logo{
+    margin-right: 0;
+  }
+
+  .site-header__sitenav{
+    display: none;
+  }
+
+  .site-header__toggler{
+    position: relative;
+    z-index: 1;
+    display: block;
+    border: none;
+    padding: 0;
+    width: 20px;
+    height: 17px;
+    background-color: transparent;
+    margin-left: auto;
+    background-image: url("../img/open.svg");
+    background-size: 20px 17px;
+    background-repeat: no-repeat;
+    background-position: right center;
+  }
+
+  .site-header--open .site-header__toggler{
+    background-image: url("../img/close.svg");
+    z-index: 30;
+  }
+
+  .site-header__toggler::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    transform: scale(2);
+    position: absolute;
+  }
+
+  .site-header--open .site-header__sitenav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: absolute;
+    z-index: 30;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 68%;
+    background-color: rgb(43, 40, 40);
+    padding-top: 112px;
+    padding-left: 24px;
+
+    .sitenav__list{
+      flex-direction: column;
+      margin-right: 0;
+      margin-bottom: 36px;
+    }
+
+    .sitenav__item:not(:last-child){
+      margin-right: 0;
+      margin-bottom: 24px;
+    }
   }
 }
