--- a/scss/blocks/_sitenav.scss
+++ b/scss/blocks/_sitenav.scss
@@ -5,7 +5,7 @@
   display: inline-flex;
   align-items: center;
   flex-wrap: wrap;
-  margin-right: 10px;
+  margin-right: auto;
 }
 
 .sitenav__item:not(:last-child){
